<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/edit_user_information"
        android:textColor="@color/teal_700"
        android:textSize="20dp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical" >

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/editEnterStatus"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_bio"
            android:inputType="textEmailAddress"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/custon_background"
            android:textColor="@color/black"
            android:layout_width="350dp"
            android:layout_height="wrap_content"/>

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/editEnterFullName"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_fullname"
            android:inputType="textEmailAddress"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/custon_background"
            android:textColor="@color/black"
            android:layout_width="350dp"
            android:layout_height="wrap_content"/>

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/editEnterAge"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_age"
            android:inputType="number"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/custon_background"
            android:textColor="@color/black"
            android:layout_width="350dp"
            android:layout_height="wrap_content"/>

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/editEnterPhonenumber"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_phonenumber"
            android:inputType="number"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="10dp"
            android:paddingRight="20dp"
            android:background="@drawable/custon_background"
            android:textColor="@color/black"
            android:layout_width="350dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="25dp">

            <Button
                android:id="@+id/btn_close"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:text="@string/close_edit"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:text="@string/save_edit"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</ScrollView>