<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/teal_700">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/teal_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:text="MessageIt"
                android:fontFamily="@font/custom_font_number_one"
                android:layout_marginTop="12dp"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:elevation="36dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="3"
        android:background="@drawable/card_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#616161"
            android:textSize="28sp"
            android:text="@string/login"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="48dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="110dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/loginEmailEditText"
                android:layout_width="320dp"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/custon_background"
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:drawableRight="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/teal_700"
                android:hint="@string/someone_gmail_com"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/loginPasswordEditText"
                android:layout_width="320dp"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/custon_background"
                android:drawableEnd="@drawable/ic_baseline_password_24"
                android:drawableRight="@drawable/ic_baseline_password_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/teal_700"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <CheckBox
                    android:id="@+id/showPasswordCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="46dp"
                    android:paddingLeft="5dp"
                    android:text="@string/show_password"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/loginForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="39dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:orientation="vertical"
                android:weightSum="2">

                <Button
                    android:id="@+id/loginSignInButton"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_background"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:backgroundTint="@color/teal_700" />

                <View
                    android:layout_width="320dp"
                    android:layout_height="0.1dp"
                    android:background="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="29dp"/>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/loginGoogleSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="29dp" />

                <ProgressBar
                    android:id="@+id/loginProgressBar"
                    android:layout_marginTop="29dp"
                    style="@android:style/Widget.Holo.Light.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/loginLoadRegisterNewUserPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="60dp"
                    android:gravity="center_horizontal"
                    android:text="@string/dont_have_an_account_register_here"
                    android:textColor="@color/black"
                    android:textSize="17sp" />


            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>